# ChangeLog for sys-block/fio
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/fio/ChangeLog,v 1.48 2014/06/25 17:53:59 vapier Exp $

*fio-2.1.10-r1 (25 Jun 2014)

  25 Jun 2014; Mike Frysinger <vapier@gentoo.org> +files/fio-2.1.10-json.patch,
  +fio-2.1.10-r1.ebuild:
  Add fix from upstream for json int parsing.

  25 Jun 2014; Mike Frysinger <vapier@gentoo.org> fio-2.1.10.ebuild:
  Add arm love.

*fio-2.1.10 (11 Jun 2014)

  11 Jun 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.10.ebuild:
  Version bump.

*fio-2.1.9 (15 May 2014)

  15 May 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.9.ebuild:
  Version bump.

*fio-2.1.8-r1 (12 Apr 2014)

  12 Apr 2014; Mike Frysinger <vapier@gentoo.org> +fio-2.1.8-r1.ebuild,
  metadata.xml:
  Add USE=gnuplot to control the gnuplot related scripts (including python dep).
  Delete the genfio script since it has security/parallel run issues. Control
  the aio/numa/zlib deps via USE flags. Drop -W flag usage as it seems to be
  pointless. Respect CPPFLAGS/PKG_CONFIG env vars.

*fio-2.1.8 (12 Apr 2014)

  12 Apr 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.8.ebuild:
  Version bump.

*fio-2.1.7 (01 Apr 2014)

  01 Apr 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.7.ebuild:
  Version bump.

*fio-2.1.6.1 (07 Mar 2014)

  07 Mar 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.6.1.ebuild:
  Version bump.

*fio-2.1.5 (27 Feb 2014)

  27 Feb 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.5.ebuild:
  Version bump.

*fio-2.1.4 (04 Feb 2014)

  04 Feb 2014; Tim Harder <radhermit@gentoo.org> +fio-2.1.4.ebuild:
  Version bump.

*fio-2.0.15 (03 Nov 2013)

  03 Nov 2013; Robin H. Johnson <robbat2@gentoo.org> +fio-2.0.15.ebuild:
  Version bump, also change description per bug #466166.

  03 Nov 2013; Matthew Thode <prometheanfire@gentoo.org> metadata.xml:
  adding myself to the list of maintainers

  29 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> fio-2.1.2.ebuild: