@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=aio? ( dev-libs/libaio ) gtk? ( dev-libs/glib:2 x11-libs/gtk+:2 ) numa? ( sys-process/numactl ) zlib? ( sys-libs/zlib )
+DESCRIPTION=Jens Axboe's Flexible IO tester
+EAPI=5
+HOMEPAGE=http://brick.kernel.dk/snaps/
+IUSE=aio gnuplot gtk numa zlib python_targets_python2_7
+KEYWORDS=~amd64 ~arm ~ia64 ~ppc ~ppc64 ~x86
+LICENSE=GPL-2
+RDEPEND=aio? ( dev-libs/libaio ) gtk? ( dev-libs/glib:2 x11-libs/gtk+:2 ) numa? ( sys-process/numactl ) zlib? ( sys-libs/zlib ) gnuplot? ( sci-visualization/gnuplot python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] )
+SLOT=0
+SRC_URI=http://brick.kernel.dk/snaps/fio-2.1.11.tar.bz2
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	c820706d8b22c1d0fe215a9d4a47671d	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=d24ecdc0c6f701a57beac7d9bd593221
