@@ -24,6 +24,7 @@ DIST fio-2.0.3.tar.bz2 373972 SHA256 5cba2bfe5f9ad23d2a1e2be5c63898ac5566e309f6f
 DIST fio-2.0.8.tar.bz2 216417 SHA256 584724a98cbed7364a550c9106c88d1ae3833b3edffda46ed5fcbb90fffb672a SHA512 ae254e4a2ea1a17052c9c2de6e6707c6254a80dd96c29a74c88d85808f1aa471e1ef2dd0a558114814b7813daedfabf4d38eb1bf875791d186b08eaeaecfe9e4 WHIRLPOOL 0350893fb7b097ae6ef902134f77fed078ae54be29e5c8c3108467c1d4dffb87e96d75fb365473c80f5f9b36b63a5fdc135bf0dd3f5f45f358081adc191a5df8
 DIST fio-2.0.9.tar.bz2 217972 SHA256 46c44757f489ffa89fa4566baba93c9f2efdc584029f1106d0c04ee900a8993a SHA512 c8be33477e3735170de9b91da3af8de32680e5e6e96728f0664aab21156e59f24a2508f6d2966b316c01e89f4932e0cdcbd9ef3c22067b76f81dd48e56dd6fc3 WHIRLPOOL 4e9313a75b56c925b58fd9dd19d4148e9643661ee63bfd7dfca89c669f42c9fc58d91bdcfaf62b5761a44a189c9c11555456557d76069ffdc80f935ea4584d84
 DIST fio-2.1.10.tar.bz2 432787 SHA256 4dd98cfe7da343b82ce351dd2a12f9ea456f9a54efc80a380786956a68c4edfc SHA512 207e4dc2c3f2d39dda6d901e38baa7a4e40ab0c2b7af074d4d7c24e72ca6859a43d6a10a1de8ab0953a82234d114762bcb53c4adf12cd12f748b3c4aa3e02914 WHIRLPOOL faecbe02ccad8b8cb982a25bfd0aec0f410c90761c3add1f0f99b0fc0973ab8ebdf6da4914ce5683fe4127c3ee9475b57216844f53194dcc955176a98054079c
+DIST fio-2.1.11.tar.bz2 438440 SHA256 aba2d8bac1997277cb9bb5a0abab345248298d4c0c712d484c3d2fab0674dbb1 SHA512 af6bb8038abbb704e21d183189f625ac321d651ff7a7027cc7f05095fb41671482c74903e08e4a5fb6ab5658b98371822580c62220a59333405ec26294a6104b WHIRLPOOL f06ee4ef948af1b74a8b365937838af13f4069c8d09a899edcc6b69d085fe9e197bf9824b9fd983bd1be4e0d1c7f5167b5cd8c96dbfce728980c78857aa31a14
 DIST fio-2.1.2.tar.bz2 403177 SHA256 ebebbdfb6035369a6e5c960527a3ec77e96cd6c35cd3cfda058d76b7f15d2729 SHA512 39e67fce877f971ca86ce95f318bd582b481b52a679435279aa0fb44c9b099660010d8f8855c82df522f2a7a9519002feb395d4693139b4785a1b40dba898df7 WHIRLPOOL 398a9581c6efaf750b33a9043f602ef2421834d24782572cacb6ff63597ced5016b7bbc1d4e18ab04728a8716763fca53b97245a6c2e0d50147c3742f94da72d
 DIST fio-2.1.4.tar.bz2 407430 SHA256 62e075862340513fcdb1f75ccee3765a47d1f380f7a6bdb2175f24acf4b77467 SHA512 5dd12c298a715012761554a2239548571052d0655e51a142d6cc87f62e0daf0a007dafd61c7d0c1a7c45cb2ca1670493caa70bb056254e1bb9ebb86b75f7f556 WHIRLPOOL 82014ef1b9e6e9c87e532a66a19f98c229cdb165e38802679da5a869bfa5be9e7872d30cfda464bd3cf66cdfc459cb7a1dbdb9c9f909c6f9c10e6e8569abb038
 DIST fio-2.1.5.tar.bz2 413595 SHA256 8cb8a6599c223ba7a3f9b7fe817a9ca2b3c8512be89c64cc223f1951f3b19d26 SHA512 3e37ab487d8c97a31c752b9f5b70ca32632d7ba871db9d3501ef1528bb5e2f40d0d698ed13fbafa2ca59166a332d5984c4f14118a91f2fe1a32d2d682d9495c0 WHIRLPOOL b86a1d689cb49c0ecd1640fb1313f5662f00fa36a0bdafe301e745c7ccfa6fd89d8967049080d4e365bf45f39574019775aac199cf26dabfd20dcee6b7974e0c
@@ -54,6 +55,7 @@ EBUILD fio-2.0.8.ebuild 959 SHA256 056b421e12c9c46d65c2336ef61e873bc3c934a43244d
 EBUILD fio-2.0.9.ebuild 959 SHA256 a73d5feb166c41a35657269868514a456ed35106abbcca85d46d8b3c8dc678b6 SHA512 c6aadcab34294d37cc757e533cb7f97c073b822204a1e83714ed3e96dfc4a315ab40bf5effcf6bc6ca90a0027e53813789761ab9ff790fca9be9a63d52066aa8 WHIRLPOOL e5f939fc964880d4006624da3326849bd9cb5e7262d657a4100615f71a3a54dbc6a5110bf4d4d6ab0a47eb54f62c5dd0696213e34896d5aad09db9df7b850fcd
 EBUILD fio-2.1.10-r1.ebuild 2140 SHA256 7f1fe60c85dc9780ab8f5738790786f95c44eac74d57ee3d6aa40861501528d2 SHA512 afe1519a1f1c24cb18103b9a1d6dce6c9f9c2a3ea1a81a55630962bc0992e6b05b43a6f5183e9fcd44ce2350f9bdd7ed68503a7093e9bb66d7d743718246764a WHIRLPOOL 511b2b11e2896d917465d2fd779651321c02be7666952c0c0e00ee05d43c6bb55ddc6aca389bd0d20f418274670cfae671df91355b0a19e75a6a8eb0f34f9893
 EBUILD fio-2.1.10.ebuild 2099 SHA256 9ffa236eb3e628f45cd58e4798a45e605efd97af9d402e3af50343ae93b6dd3f SHA512 d4356bb90fe4c1754d932efb4fc9a49b9a205ed5d2345715de5f20c1d76361b3d5f0cf17a246a749209e4e4039aef8dfc1d4e4556a46d2c2cf4fb409870c806a WHIRLPOOL 35c44d3e137f6e3ad8c3dc93c46837940a3a2adcd34db4b91cf3a7a3bfd876fe9a98a7a59174945cadfe6b0ca859dc2d54dcbfc6db68e8e42bc2a5e54ae9d686
+EBUILD fio-2.1.11.ebuild 2102 SHA256 38ec96164068a25facfda5f393918feb84b33751304e4da09d4220982da13667 SHA512 6a763393dfb6d1245181e069e8ffd7db9efbbdb964e0f3f58aa322bc4b8904de0ffd929fbd75aaac830a053c9816af631e7b5c70f2ea0b08dbcac8308cf99d9c WHIRLPOOL d41d7a39b2e8a9cfb65ffc6ad8472768be1a74e891a0f16a536e1371db2203fe5a2a5a9374e97fd4c41b7c35317efdc7714ab7bf54cebdab3e391fef99bd0045
 EBUILD fio-2.1.2.ebuild 1279 SHA256 848d899063549182861ad214660564dd0dc533f6e47db934ffbc3296c727483e SHA512 225a95c546d3e44ea5629f6ea7807852a223b27de8bf256bb972fda5fc45b4ce713ed0df3fc86d9cafaec3b386cdb382872bda0a965c069c5b23fca8a12aec7e WHIRLPOOL 60764e080375aeea42d55d26cb5d114406bfcdde4292b0a9fd63262b3bace4f746b28267b6b5dd389d90808dd0322be6e3f58480e46d3994f6d8132f89aef1f7
 EBUILD fio-2.1.4.ebuild 1293 SHA256 fe41e5847d3b2e86005d9a109ac602005146ef8153bdade46e5768ae3bfdbbc1 SHA512 2060b56309d81c80b524d547fc181e284a7d88b6ba4fe280074feb991c570e24c8f17b0510e3be800a91d5bace6bdf02e5c9cefaf2caec4dd36c68b4851b0397 WHIRLPOOL 7dd3dc6efd0673423eaaafb0dedf7eed17618789849a98ff9513e203443d93a0464118b82246cd3d6f50e6999e10e20a4afd9526d4532de07ef6560069d51004
 EBUILD fio-2.1.5.ebuild 1243 SHA256 0599acf57d2e8ea7e1b32b9bb6f1d6b22f26844438f6bc9066c093082c950988 SHA512 bb9a7516e4d6c2c4d0647846ca470e800fa9f7d783391238fbcfb0516d3078e22d9bdfbf2ed94d042dfa4855ad2ce196d5cfd72dbdc10f623ccd10e882c12c58 WHIRLPOOL e9e10a2611e9a36629433e54cc98f1114a7ee8f8d6f69e7a78354cb2c7f0bdce408ba10556830a9a0db2f1869e6cb656df41faddc53ac2e02be1a4fa35f815d2
@@ -62,22 +64,16 @@ EBUILD fio-2.1.7.ebuild 1243 SHA256 ed5b19b051a070bd116c54db5f9476177cc8bd201683
 EBUILD fio-2.1.8-r1.ebuild 2096 SHA256 6975643a7b531634509995af0f4b20cde846155bd2348c5fb62778a1b19ca3a7 SHA512 8d507846ba5865089b8fe701be6a423d9bf7945f2f7b61c4b9b16f36326555d820a234d29c579b43a784fe59fed4a7c958ee39fc52aec870ec7640b27cb3375c WHIRLPOOL 19a8e58ffa5c671de7fd3a5b5dfbd8cfbad31ca9b6c135a12c5c6d91c9cc4a66328de14a674a39a7a441a4f837587c8a0f8038d2fd6f327ed7811b1fee0ad7dc
 EBUILD fio-2.1.8.ebuild 1243 SHA256 423f7bb912ddf169cbcc891f4a6905ae7d85acf19547dcc12271be74c51e6f06 SHA512 095e8683cc5032119597631805a0558a832b493a8b677e09691aa0f5b4dea17e324f446c2b4f90ee89248125415a23eefe52f03680c085a51f831ab91e4f827f WHIRLPOOL 8ae5391bf821cf8aeb4880560fd61286b345139fdf8afaf41a2a75286169d2551395b6b3abe366a2a3a7c010ac701e2c2a578040242d8f0c4c81356b95e3b8f2
 EBUILD fio-2.1.9.ebuild 2096 SHA256 f37da029dc6827248770825efb270db26160a6e16c210ea0c869c467007cbe8b SHA512 d38be092804de72c12d061f8db0d337d2d599e15fde37fed50f9f2ae4c7278ea09840699490f6d708490a2adf29c91a68d6ebe91c81d192ee477a0c1954fa79d WHIRLPOOL ef59b7bbd90f59999152e67fa454ff53afa21097c262fd68a188716f5689a8b0b7bee247d263cc31ef54044aa2e77fcd6bbbef0a174eb55811c9c58c0d1849cc
-MISC ChangeLog 6094 SHA256 7e4924453f4b0eca061feca4c34916f64994a506e02d61b670858852a0e310cf SHA512 ce99301fd2f126276a6b86af0b9fc9469c3c6c552e615966ddaaaf7ce6d95f7f4991d8b2d18a7ffd018203d79e6bd40882f23a0426663e544c5499a124a78366 WHIRLPOOL 273b152a113d03cef35910c684b874644d562f9c0eb1af73aa4b897f713d475f0b7207b94048c3104ecb0169feab1c6a21e26f3e5969b84fa20212cbfe9646b8
+MISC ChangeLog 6210 SHA256 bc7a908632f1f862b559caec8c8d457a96acd981db42fe184adaf286077bc3a1 SHA512 83728f6cb1265217f990f3232728a9457c89a62b5c79841cfbe11871a2048099c45a5b6b2cbdb1eb68e3b2b1ac378351fc384f3483e93dcb75486dbf741c8855 WHIRLPOOL a4489a6bcb9589b8bae651ef58b987819b4126ec337692129103314a5f8f31eb761c75bb97726b5bcea3441b93b6046ef4e6fd6812c030605952962cd4b30db6
 MISC metadata.xml 452 SHA256 5b6d0e9054d1eac1b7990980f960776666c8077053b1b4afcb0e6d274dea86fc SHA512 9a3b2c5edc41973d8a9ec4ac9f385a86d94598c9724d8105a2d7983221aeb1798bf8f3f06dca39e2d5f7f5406209ebfa99c07fd3611db5decba534ca62f9f67e WHIRLPOOL 7ea8effc47fb8e193b5c5e3d5c50d1e69d05d3fc4d950e129075df1d3d5c5fe6bb307ea5928f7e2b4af8dabd1d30d419697a7b60b1f61d54c865601068df4f2e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTqwy8AAoJEPGu1DbS6WIA1/sQAItEvZ6C/dwZim3JftTzQ5CD
-YKansVAfCMbiSab+Db7TfYHNIE3dA6Zhar9IUer32vY4b5YW88jXrBxbjJPYiarE
-9asNmnYa3A8u5j9gMmcoZqpnha2mDUy4qZcOS5ujv/vPDx/AHDS6glip+jIZDRCP
-k34McKN8UTVg7/0P1Z+E/M7S0wPDvBwRuQyDufZB3h6nKSDSN1xxxCg42wnwdgWT
-yb7aJtOAcLihnHvG8yZsZu9jQIOzzM3Jg/O16nxw7ad10ydh71I9Jqt49jito/KC
-kTQONI8cHHURSU2SvLS3INwgeeJAt4eX2KN7EvvWsYVRyAAz37tT2E7DNWugN+RE
-el+PFLXRvgv3wdNqgJ8C4aDtk00zd68Z0GAA5JB/E6YTTh1lFlD4s+gx61sC6jkF
-hzGbGDdwFMtXu1rg3PRC/0N9nQShN4304htnj8pnr+ub+u/gbHqbYswaDWTUH8j9
-lVHdCae6GreuR15rTC0caFEuIbZ7EUNbjoCadRvDEbyO8NdcrcQikDQ243MdOBvX
-x0pDbRvbct9IC70Td7NjtSMW4fL32KXCZw9pm07x3nWbT4dhxDR/wA/+LdKEgwpQ
-jWTC5Hed8QUfO6WSiDR9oKCaZOg90zUldFkxgCPnYvyFBtgQwft6gH+Wf0jfkmP0
-tH0M3eD9y4LwUrd/HYR5
-=vqUx
+iQEcBAEBCAAGBQJTyfRyAAoJEEqz6FtPBkyjv5kH/iyxNMmpl1Ctag1KT/aW5O6m
+CdMG8iY+EefXM3J3T16zn2negf5sWTTvuB8+zXSOnnzJtU7Yp6YieVDNBpcScJ2p
+pNDFKYKrJ4p+BcQKVvKFZg9j+iLZawJF78SfttX1I6kwLb0ond/F8J/ga6yoYnm2
+DdRGbyAEvBd3qjHde2LJqA+zgJLTNQBSR1gwVsfgm/pZY28MWeDFYTG0aNybGZP8
+rpvWkAXmtx3dzQJJtLddUS053OkgrBi9l6zEPcQ2b0gbdoivOjLtOSYuDyMP5NuY
+75hsL3k83KkyXBO6dgq5HtEsl22P+u+v27R1iTkQ7P0gxX+mQeMKMdSBzwXSDIw=
+=A8QC
 -----END PGP SIGNATURE-----
